2013-02-19  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* stdlib/cxa_thread_atexit_impl.c: Fix Copyright year.
	* stdlib/tst-tls-atexit-lib.c: Likewise.
	* stdlib/tst-tls-atexit.c: Likewise.

2013-02-18  Mike Frysinger  <vapier@gentoo.org>

	* stdlib/stdlib.h (aligned_alloc): Use __attribute_malloc__
	and __attribute_alloc_size__.

2013-02-18  Mike Frysinger  <vapier@gentoo.org>

	* include/programs/xmalloc.h: Change __attribute_alloc_size to
	__attribute_alloc_size__.
	* include/sys/cdefs.h (__attribute_alloc_size): Macro removed.
	* misc/sys/cdefs.h (__attribute_alloc_size__): New macro.

2013-02-18  Mike Frysinger  <vapier@gentoo.org>

	* include/programs/xmalloc.h: New file.
	* catgets/gencat.c: Include it.
	(xmalloc, xcalloc, xrealloc, xstrdup): Don't declare them.
	* elf/pldd.c: Likewise.
	* iconv/iconv_charmap.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* iconv/strtab.c: Likewise.
	* locale/programs/locale.c: Likewise.
	* locale/programs/localedef.h: Likewise.
	* locale/programs/simple-hash.c: Likewise.
	* nscd/nscd.h: Likewise.
	* nss/makedb.c: Likewise.
	* sysdeps/generic/ldconfig.h: Likewise.

2013-02-18  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* Versions.def: Add GLIBC_2.18.
	* include/link.h (struct link_map): New member l_tls_dtor_count.
	* include/stdlib.h (__cxa_thread_atexit_impl): Declare.
	(__call_tls_dtors): Likewise.
	* sysdeps/unix/sysv/linux/i386/nptl/libc.abilist: Add
	__cxa_thread_atexit_impl.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fpu/nptl/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/nptl/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/nptl/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/nptl/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/sh/nptl/libc.abilist: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/nptl/libc.abilist:
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/nptl/libc.abilist:
	Likewise.